--- a/E621Browser/E621Browser.csproj
+++ b/E621Browser/E621Browser.csproj
@@ -19,4 +19,8 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.1"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Areas\Identity\Pages\_ViewStart.cshtml" />
+    </ItemGroup>
+
 </Project>
